# programmieruebung2_SS2025

./: .gitignore  README.md  main.py  pyproject.toml  sort.py
docs/: uml_usecase.drawio
src/: analyze_activity_data.py  ekgdata.py  find_peaks.py  load_data.py  power_curve.py  read_data.py  sort.py
