[project]
name = "programmieruebung2_SS2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MaierElias", email = "me7770@mci4me.at"},
    {name = "juliusmayr", email = "mj4127@mci4me.at"}
]
dependencies = ["numpy>=2.2.5", "matplotlib>=3.10.1", "streamlit>=1.45.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
